--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@types/jsonwebtoken": "^9.0.10",
+    "jsonwebtoken": "^9.0.3",
     "ws": "^8.19.0"
   },
   "keywords": [],
