--- a/apps/https-backend/package.json
+++ b/apps/https-backend/package.json
@@ -13,6 +13,11 @@
     "@types/express": "^5.0.6",
     "express": "^5.2.1"
   },
+  "devDependencies" : {
+    "@repo/typescript-config": "workspace:*",
+    "@repo/backend-common": "workspace:*",
+    "@types/ws": "^8.18.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
