added common package

--- a/apps/https-backend/package.json
+++ b/apps/https-backend/package.json
@@ -16,7 +16,8 @@
   "devDependencies" : {
     "@repo/typescript-config": "workspace:*",
     "@repo/backend-common": "workspace:*",
-    "@types/ws": "^8.18.1"
+    "@types/ws": "^8.18.1",
+    "@repo/common": "workspace:*"
   },
   "keywords": [],
   "author": "",
