--- a/apps/https-backend/package.json
+++ b/apps/https-backend/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/express": "^5.0.6",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "@repo/db": "workspace:*"
   },
   "devDependencies" : {
     "@repo/typescript-config": "workspace:*",
