--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -13,7 +13,7 @@
     "jsonwebtoken": "^9.0.3",
     "ws": "^8.19.0"
   },
-  "devDependencies" : {
+  "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@repo/backend-common": "workspace:*",
     "@types/ws": "^8.18.1"
@@ -21,5 +21,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "module"
 }
