--- a/packages/backend-common/package.json
+++ b/packages/backend-common/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.js",
+      "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
@@ -20,5 +20,5 @@
   "license": "ISC",
   "keywords": [],
   "author": "",
-  "type": "commonjs"
+  "type": "module"
 }
