--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -2,11 +2,16 @@
   "name": "@repo/common",
   "version": "1.0.0",
   "description": "",
+  "main": "dist/types.js",
+  "types": "dist/types.d.ts",
   "exports": {
-    "./types": "./src/types.ts"
+    "./types": {
+      "import": "./dist/types.js",
+      "types": "./dist/types.d.ts"
+    }
   },
-  "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -15,7 +20,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "zod": "^4.3.6"
   }
