--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -1,3 +1,10 @@
 {
-    "extends": "../typescript-config/base.json"
+    "extends": "../typescript-config/base.json",
+    "compilerOptions": {
+        "outDir": "./dist",
+        "rootDir": "./src"
+    },
+    "include": [
+        "src/**/*"
+    ]
 }
