--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.js",
+      "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
@@ -21,5 +21,6 @@
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "prisma": "^6.19.2"
-  }
+  },
+  "type": "module"
 }
