--- a/apps/https-backend/tsconfig.json
+++ b/apps/https-backend/tsconfig.json
@@ -2,6 +2,13 @@
    "extends": "@repo/typescript-config/base.json",
    "compilerOptions": {
       "rootDir": "./src",
-      "outDir": "./dist"
-   }
+      "outDir": "./dist",
+      "typeRoots": [
+         "./node_modules/@types",
+         "./src/types"
+      ]
+   },
+   "include": [
+      "src/**/*"
+   ]
 }
