--- a/apps/https-backend/tsconfig.json
+++ b/apps/https-backend/tsconfig.json
@@ -2,11 +2,7 @@
    "extends": "@repo/typescript-config/base.json",
    "compilerOptions": {
       "rootDir": "./src",
-      "outDir": "./dist",
-      "typeRoots": [
-         "./node_modules/@types",
-         "./src/types"
-      ]
+      "outDir": "./dist"
    },
    "include": [
       "src/**/*"
